--- a/views/LoginTest.html
+++ b/views/LoginTest.html
@@ -1,7 +1,7 @@
 <form>
     <p>
         <strong>아이디</strong>
-        <input type="text" name="name" value="아이디 입력">
+        <input type="text" name="id" value="아이디 입력">
     </p>
     <p>
         <strong>비밀번호</strong>
@@ -9,6 +9,6 @@
     </p>
 
     <p>
-        <input type="submit" value="제출">
+        <input type="submit" value="로그인">
     </p>
 </form>
