--- a/views/LoginTest.ejs
+++ b/views/LoginTest.ejs
@@ -1,14 +1,15 @@
-<form>
+<form action="/result_page" method="GET">
     <p>
         <strong>아이디</strong>
-        <input type="text" name="id" value="아이디 입력">
+        <input type="text" name="email" value="아이디 입력">
     </p>
     <p>
         <strong>비밀번호</strong>
-        <input type="password" name="password" value="비밀번호 입력">
+        <input type="password" name="pwd" value="비밀번호 입력">
     </p>
 
     <p>
+
         <input type="submit" value="로그인">
     </p>
 </form>
