--- a/views/SigninTest.ejs
+++ b/views/SigninTest.ejs
@@ -7,14 +7,14 @@
         <strong>이메일</strong>
         <input type="text" name="email" value="이메일 입력">
     </p>
-    <!-- <p>
+    <p>
         <strong>비밀번호</strong>
-        <input type="password" name="email" value="비밀번호 입력">
+        <input type="password" name="pwd" value="비밀번호 입력">
     </p>
     <p>
         <strong>비밀번호 재입력</strong>
-        <input type="password" name="email" value="비밀번호 재입력">
-    </p> -->
+        <input type="password" value="비밀번호 재입력">
+    </p>
 
     <p>
         <input type="submit" value="회원가입">
