--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,12 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <a href="/signin_page">Sign in</a>
-    <a href="/login_page">log in</a>
+    <% if(login){ %>
+      <p>Welcome to <%= title %></p>
+      <a href="/logout">logout</a>
+    <%} else { %>
+      <a href="/signin_page">Sign in</a>
+      <a href="/login_page">log in</a>
+    <% } %>
   </body>
 </html>
