--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <% if(login){ %>
       <p>Welcome to <%= title %></p>
       <a href="/logout">logout</a>
+      <a href="/write">글쓰기</a>
     <%} else { %>
       <a href="/signin_page">Sign in</a>
       <a href="/login_page">log in</a>
