--- a/views/write.ejs
+++ b/views/write.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <form action="/index" method="POST">
+    <form action="/write" method="POST">
         <p>
             <strong>제목</strong>
             <input type="text" name="title" placeholder="제목 입력">
