--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
           <a href="/login_page">
             <p class="lead" style=" padding-left: 50%; display: inline; text-align: right;">로그인
             </p>
-            <a href="#">
+            <a href="/signin_page">
               <p class="lead" style="display: inline;">회원가입
               </p>
             </a>
