--- a/views/write.ejs
+++ b/views/write.ejs
@@ -1,96 +1,99 @@
-<!DOCTYPE html>
-<html lang="ko">
+<form action="/index" method="post">
+  <!DOCTYPE html>
+  <html lang="ko">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
-  <title< /title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
+    <title>글쓰기</title>
 
-    <!-- 부트스트랩 -->
+      <!-- 부트스트랩 -->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <style type="text/css">
-      a:link {
-        color: white;
-        text-decoration: none;
-      }
+      <style type="text/css">
+        a:link {
+          color: white;
+          text-decoration: none;
+        }
 
-      a:visited {
-        color: white;
-        text-decoration: none;
-      }
+        a:visited {
+          color: white;
+          text-decoration: none;
+        }
 
-      a:hover {
-        color: white;
-        text-decoration: underline;
-      }
-    </style>
+        a:hover {
+          color: white;
+          text-decoration: underline;
+        }
+      </style>
 
-    <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
-    <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
-    <!--[if lt IE 9]>
+      <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
+      <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
+      <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+  </head>
 
-<body>
-  <div class="jumbotron jumbotron-fluid"
-    style="background-color: rgb(111, 192, 156); padding:1.5%; align-items: center;">
-    <div class="" style="color: white; ">
-      <h1 class="display-4" style="display: inline; padding-left: 3%;">Commu </h1>
-      <p class="lead" style="display: inline;">The GSM Anonymous Space
-        <a href="#">
-          <p class="lead" style=" padding-left: 50%; display: inline; text-align: right;">로그인
-          </p>
-        </a>
-        <a href="#">
-          <p class="lead" style="display: inline;">회원가입
-          </p>
-        </a>
-      </p>
-
-    </div>
-  </div>
-
-  <div class="jumbotron jumbotron-fluid" style="background-color: rgb(78, 138, 112); padding:1.5%; ">
-    <div class="" style="color: white; ">
-      <p class="lead" style=" display: inline; padding-left: 3%;">"이름" 님 환영합니다!
-      </p>
-      <a href="#">
-        <p class="lead" style="display: inline; padding-left: 65%;">다시 목록으로 돌아가기
+  <body>
+    <div class="jumbotron jumbotron-fluid"
+      style="background-color: rgb(111, 192, 156); padding:1.5%; align-items: center;">
+      <div class="" style="color: white; ">
+        <h1 class="display-4" style="display: inline; padding-left: 3%;">Commu </h1>
+        <p class="lead" style="display: inline;">The GSM Anonymous Space
+          <a href="#">
+            <p class="lead" style=" padding-left: 50%; display: inline; text-align: right;">로그인
+            </p>
+          </a>
+          <a href="#">
+            <p class="lead" style="display: inline;">회원가입
+            </p>
+          </a>
         </p>
-      </a>
-      </p>
+
+      </div>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid" style="background-color: rgb(78, 138, 112); padding:1.5%; ">
+      <div class="" style="color: white; ">
+        <p class="lead" style=" display: inline; padding-left: 3%;">"이름" 님 환영합니다!
+        </p>
+        <a href="#">
+          <p class="lead" style="display: inline; padding-left: 65%;">다시 목록으로 돌아가기
+          </p>
+        </a>
+        </p>
+
+      </div>
 
     </div>
 
-  </div>
-
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text">제목</span>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">제목</span>
+      </div>
+      <input type="text" class="form-control" name="title">
     </div>
-    <input type="text" class="form-control" name="title">
-  </div>
 
-  <div class="input-group mb-3" style="height: 10cm;">
-    <div class="input-group-prepend">
-      <span class="input-group-text">내용</span>
+    <div class="input-group mb-3" style="height: 10cm;">
+      <div class="input-group-prepend">
+        <span class="input-group-text">내용</span>
+      </div>
+      <input type="text" class="form-control" name="content" style="height: 10cm; vertical-align: middle; ">
     </div>
-    <input type="text" class="form-control" name="content" style="height: 10cm; vertical-align: middle; ">
-  </div>
 
-  <button type="submit" class="btn btn-success" style="float:right;">등록</button>
+    <button type="submit" class="btn btn-success" style="float:right;">등록</button>
 
-  <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
-  <script src="js/bootstrap.min.js"></script>
-</body>
+    <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 
-</html>
+  </html>
+
+</form>
