Login&SignIn Modify

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -45,7 +45,7 @@
       <div class="" style="color: white; ">
         <h1 class="display-4" style="display: inline; padding-left: 3%;">Commu </h1>
         <p class="lead" style="display: inline;">The GSM Anonymous Space
-          <a href="/login_page">
+          <!-- <a href="/login_page">
             <p class="lead" style=" padding-left: 50%; display: inline; text-align: right;">로그인
             <% if(login){ %>
           <a href="/logout">
@@ -60,7 +60,7 @@
               </p>
             </a>
           </a>
-        <% } %>
+        <% } %> -->
         </p>
 
       </div>
